fix: removing px and spacing updates

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   /* Neutral Colors */
   --color-grey-500: hsl(234, 12%, 34%);
   --color-grey-400: hsl(212, 6%, 44%);
+  --color-grey-100: hsl(0, 0%, 80%);
   --color-grey-50: hsl(0, 0%, 98%);
   --color-white: hsl(0, 0%, 100%);
 
@@ -20,7 +21,7 @@
   --font-size-base: 0.9375rem; /* ~15px */
   --font-size-xs: 0.813rem; /* ~13px */
   --fs-h1: clamp(1.2rem, 4vw + 0.5rem, 2.25rem);     /* min ~23px, max ~36px */
-  --fs-h2: clamp(1.3rem, 4vw + 0.3rem, 2.188rem);  /* min ~20px, max ~34px */
+  --fs-h2: clamp(1.4rem, 4vw + 0.3rem, 2.188rem);  /* min ~24px, max ~34px */
   --fs-h3: clamp(1rem, 2vw + 0.2rem, 1.35rem);   /* min ~16px, max ~24px */
 
   /* Font Weights */
@@ -74,7 +75,7 @@
 @layer utilities {
   header {
     text-align: center;
-    margin-block: 5rem 4rem;
+    margin-block: 6rem 4rem;
     width: min(90%, 33.5rem);
   }
 
@@ -82,7 +83,7 @@
     padding-inline: 1.5rem;
     gap: 2rem;
     margin-block-end: 4rem;
-    width: min(100%, 1260px);
+    width: min(100%, 78.75rem);
     margin-inline: auto;
   }
 
@@ -92,7 +93,7 @@
     padding-block: 1.5rem 2.5rem;
     padding-inline: 2rem;
     border-top: 0.267rem solid;
-    box-shadow: 0 1rem 2rem -1rem #ccc;
+    box-shadow: 0 1rem 2rem -1rem var(--color-grey-100);
     width: 100%;
     
     &.supervisor {
